<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddLocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textShortMessage|textPostalAddress"
            app:layout_constraintEnd_toStartOf="@+id/btnFind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Enter location here" />

        <Button
            android:id="@+id/btnFind"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="Find"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvLocationInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:text="Location Information" />

    <Button
        android:id="@+id/btnAddLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Add" />
</LinearLayout>